@@ -14,11 +14,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import umc6.tom.alarm.converter.AlarmSetConverter;
 import umc6.tom.alarm.repository.AlarmSetRepository;
-import umc6.tom.apiPayload.ApiResponse;
 import umc6.tom.apiPayload.code.status.ErrorStatus;
 import umc6.tom.apiPayload.exception.handler.*;
 import umc6.tom.board.converter.BoardConverter;
-import umc6.tom.board.dto.BoardRequestDto;
 import umc6.tom.board.dto.BoardResponseDto;
 import umc6.tom.board.model.Board;
 import umc6.tom.board.model.BoardComplaint;
@@ -244,8 +242,8 @@ public class UserServiceImpl implements UserService {
     // 회원 탈퇴 UserStatus ACTIVE -> WITHDRAW
     @Override
     public void withDraw(Long userId, UserDtoReq.WithDrawDto request) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        User user = findUser(userId);
 
         // 기존 비밀번호와 일치하는지 확인
         if (!passwordEncoder.matches(request.getPassword(), user.getPassword())) {
@@ -333,9 +331,8 @@ public class UserServiceImpl implements UserService {
     // 비밀번호 찾기 후 재설정
     @Override
     public void findRestorePassword(UserDtoReq.FindRestorePasswordDto request) {
-        User user = userRepository.findById(request.getId())
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
 
+        User user = findUser(request.getId());
         if (!request.getPassword().equals(request.getPasswordCheck())) {
             throw new UserHandler(ErrorStatus.PASSWORD_NOT_MATCHED);
         }
@@ -346,8 +343,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public void restoreAccount(Long userId, UserDtoReq.RestoreAccountDto request) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+        User user = findUser(userId);
 
         if (user.getAccount().equals(request.getAccount())) {   // 본인이 사용중인 아이디 확인
             throw new UserHandler(ErrorStatus.USER_ACCOUNT_IS_YOURS);
@@ -361,8 +357,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public void restorePassword(Long userId, UserDtoReq.RestorePasswordDto request) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+        User user = findUser(userId);
 
         if (!passwordEncoder.matches(request.getUsedPassword(), user.getPassword())) {
             throw new UserHandler(ErrorStatus.USER_PASSWORD_NOT_EQUAL);
@@ -378,8 +373,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public void restoreNickName(Long userId, UserDtoReq.RestoreNickNameDto request) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+        User user = findUser(userId);
 
         if (user.getNickName().equals(request.getNickName())) {
             throw new UserHandler(ErrorStatus.USER_NICKNAME_IS_YOURS);
@@ -395,8 +389,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public void restorePhone(Long userId, UserDtoReq.PhoneDto request) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+        User user = findUser(userId);
 
         // 휴대폰 번호 "-" 제거
         request.setPhone(request.getPhone().replaceAll("-", ""));
@@ -437,8 +430,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public UserDtoRes.ChangeAgreementDto changeAgreement(Long userId) {
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+        User user = findUser(userId);
 
         // 다른 값으로 저장되어 있다면 AGREE 로 설정
         if (user.getAgreement() == Agreement.AGREE) {
@@ -455,8 +447,7 @@ public class UserServiceImpl implements UserService {
 
         String fileName;
 
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+        User user = findUser(userId);
 
         // 사진 변경
         if (request != null) {
@@ -487,8 +478,8 @@ public class UserServiceImpl implements UserService {
     // 프로필 사진 기본값으로 변경
     @Override
     public void restorePicDef(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        User user = findUser(userId);
 
         if (user.getPic().equals(DEFAULT_PROFILE_PATH)) {
             throw new UserHandler(ErrorStatus.PROFILE_IS_DEFAULT);
@@ -500,8 +491,8 @@ public class UserServiceImpl implements UserService {
     // 타인 프로필 조회
     @Override
     public UserDtoRes.FindProfileDto findProfile(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        User user = findUser(userId);
 
         if(user.getAgreement() == Agreement.DISAGREE) {
             return UserConverter.findProfileRes(user,null,null);
@@ -530,8 +521,8 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public Page<BoardResponseDto.FindUserBoardsDto> findProfileBoards(Long userId, Pageable adjustedPageable){
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        User user = findUser(userId);
 
         Page<Board> boardPageEntity = boardRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId(),adjustedPageable);
 
@@ -561,27 +552,27 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public Page<BoardResponseDto.HistoryDto> findHistoryAll(Long userId, Pageable pageable){
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        User user = findUser(userId);
 
         //자기가 쓴 글
         List<BoardResponseDto.HistoryDto> boardsDto = boardRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId()).stream()
                                         .map(board -> UserConverter.toHistoryRes(board, "내가 쓴 글", board.getCreatedAt()))
-                                        .collect(Collectors.toList());
+                                        .toList();
         //자기가 댓글 단 글
         List<BoardResponseDto.HistoryDto> pinBoardsDto = pinRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId()).stream()
                                         .map(pin -> new PinBoardDto(pin, boardRepository.findById(pin.getBoard().getId())
                                                 .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
                                         .distinct()
                                         .map(pinBoardDto -> UserConverter.toHistoryRes(pinBoardDto.getBoard(), "댓글 단 글", pinBoardDto.getPin().getCreatedAt()))
-                                        .collect(Collectors.toList());
+                                        .toList();
         //자기가 좋아요 누른 글
         List<BoardResponseDto.HistoryDto> likeBoardsDto = boardLikeRepository.findAllByUserIdOrderByIdDesc(user.getId()).stream()
                                         .map(like -> new LikeBoardDto(like, boardRepository.findById(like.getBoard().getId())
                                                 .orElseThrow(() -> new BoardHandler(ErrorStatus.BOARD_NOT_FOUND))))
                                         .distinct()
                                         .map(likeBoardDto -> UserConverter.toHistoryRes(likeBoardDto.getBoard(), "좋아요 단 글",likeBoardDto.getLike().getCreatedAt()))
-                                        .collect(Collectors.toList());
+                                        .toList();
 
         // 세 개의 리스트를 합치고 시간 순으로 정렬
         List<BoardResponseDto.HistoryDto> mergedList = Stream.concat(Stream.concat(boardsDto.stream(), pinBoardsDto.stream()), likeBoardsDto.stream())
@@ -599,9 +590,8 @@ public class UserServiceImpl implements UserService {
     // 내가 쓴글 조회
     @Override
     public Page<BoardResponseDto.HistoryDto> findMyBoards(Long userId, Pageable adjustedPageable) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
 
+        User user = findUser(userId);
         //자기가 쓴 글
         Page<Board> boardPage = boardRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId(),adjustedPageable);
 
@@ -615,8 +605,8 @@ public class UserServiceImpl implements UserService {
     // 내가 쓴 댓글 글 조회
     @Override
     public Page<BoardResponseDto.HistoryDto> findMyComments(Long userId, Pageable adjustedPageable) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        User user = findUser(userId);
 
         // 자기가 댓글 단 글
         Page<Pin> pinPage = pinRepository.findAllByUserIdOrderByCreatedAtDesc(user.getId(), adjustedPageable);
@@ -654,8 +644,8 @@ public class UserServiceImpl implements UserService {
     // 내가 좋아요 단 글 조회
     @Override
     public Page<BoardResponseDto.HistoryDto> findMyLikes(Long userId, Pageable adjustedPageable) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        User user = findUser(userId);
 
         //자기가 좋아요 누른 글
         List<BoardLike> likePage = boardLikeRepository.findAllByUserIdOrderByIdDesc(user.getId(),adjustedPageable);
@@ -673,8 +663,8 @@ public class UserServiceImpl implements UserService {
     // 활동내역 전체 검색 조회 (내가 쓴글,댓글 단글, 좋아요)
     @Override
     public Page<BoardResponseDto.HistoryDto> findTextHistoryAll(Long userId, Pageable adjustedPageable,String content){
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        User user = findUser(userId);
 
         //자기가 쓴 글
         List<BoardResponseDto.HistoryDto> boardsDto = boardRepository.findAllByUserIdAndContentContainingOrUserIdAndTitleContainingOrderByCreatedAtDesc(user.getId(),content,user.getId(),content,adjustedPageable).stream()
@@ -727,8 +717,8 @@ public class UserServiceImpl implements UserService {
     // 활동내역 내가쓴글 검색 조회
     @Override
     public Page<BoardResponseDto.HistoryDto> findTextHistoryBoards(Long userId, Pageable adjustedPageable, String content){
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        User user = findUser(userId);
 
         //자기가 쓴 글
         List<BoardResponseDto.HistoryDto> boardsDto = boardRepository.findAllByUserIdAndContentContainingOrUserIdAndTitleContainingOrderByCreatedAtDesc(user.getId(),content,user.getId(),content,adjustedPageable).stream()
@@ -741,9 +731,8 @@ public class UserServiceImpl implements UserService {
     // 활동내역 댓글 검색 조회
     @Override
     public Page<BoardResponseDto.HistoryDto> findTextHistoryComments(Long userId, Pageable adjustedPageable, String content) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
 
+        User user = findUser(userId);
         //자기가 댓글 단 글
         List<BoardResponseDto.HistoryDto> pinBoardsDto = pinRepository.findAllByUserIdAndCommentContainingOrderByCreatedAtDesc(user.getId(),content, adjustedPageable).stream()
                 .map(pin -> new PinBoardDto(pin, boardRepository.findById(pin.getBoard().getId())
@@ -773,8 +762,8 @@ public class UserServiceImpl implements UserService {
     // 활동내역 좋아요 검색 조회
     @Override
     public Page<BoardResponseDto.HistoryDto> findTextHistoryLikes(Long userId, Pageable adjustedPageable, String content) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+
+        User user = findUser(userId);
 
         //자기가 좋아요 누른 글
         List<BoardResponseDto.HistoryDto> likeBoardsDto = boardLikeRepository.findAllByUserIdOrderByIdDesc(user.getId(), adjustedPageable).stream()
@@ -796,17 +785,11 @@ public class UserServiceImpl implements UserService {
 
     // 경고 부여
     @Override
-    public UserDtoRes.warnDto warn(Long userId, Long targetUserId, UserDtoReq.WarnsDto request) {
+    public UserDtoRes.warnDto warn(Long userId, Long targetUserId, UserDtoReq.WarnDto request) {
 
-        User manager = userRepository.findById(userId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+        managerAuth(userId);
 
-        if (!manager.getRole().equals(Role.ADMIN)) {
-            throw new AdminHandler(ErrorStatus.NOT_ADMIN);
-        }
-
-        User user = userRepository.findById(targetUserId)
-                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+        User user = findUser(targetUserId);
 
         Prohibit prohibit = prohibitRepository.findById(targetUserId)
                 .orElseThrow(() -> new ProhibitHandler(ErrorStatus.PROHIBIT_NOT_FOUND));
@@ -900,5 +883,47 @@ public class UserServiceImpl implements UserService {
         return UserConverter.userFindDetailDto(user,boardComplaintList,top3ComplaintPinCommentList,boardComplaints.size(),pinComplaints.size() + commentComplaints.size());
     }
     // 회원 정지
+    @Override
+    public UserDtoRes.suspendDto suspension(Long userId, Long targetUserId, UserDtoReq.SuspendDto request) {
 
+        managerAuth(userId);
+
+        User user = findUser(targetUserId);
+
+        Prohibit prohibit = prohibitRepository.findById(targetUserId)
+                .orElseThrow(() -> new ProhibitHandler(ErrorStatus.PROHIBIT_NOT_FOUND));
+
+        prohibit.setDivision(request.getDivision());
+
+        List<Board> boards = boardRepository.findByIdIn(request.getBoardId());
+        boards.forEach(board -> prohibitBoardRepository.save(ProhibitBoard.builder()
+                .prohibit(prohibit)
+                .board(board)
+                .build()));
+
+        prohibit.setSuspensionDue(LocalDateTime.now().plusDays(request.getSuspensionDueInt()));
+
+        return UserDtoRes.suspendDto.builder()
+                .message("귀하는 " + request.getMessage() + "의 이유로 커뮤니티 가이드라인을 위반 하였고, 이에 " + request.getSuspensionDueInt() + "일 정지에 해당하는 조취를 취하는 바이다.")
+                .nickName(user.getNickName())
+                .userId(targetUserId)
+                .build();
+    }
+
+    // 관리자의 권한을 갖는지 검증하는 메서드
+    @Override
+    public void managerAuth(Long userId) {
+        if (!Role.ADMIN.equals(userRepository.findById(userId)
+                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND))
+                .getRole())) {
+            throw new UserHandler(ErrorStatus.NOT_ADMIN);
+        }
+    }
+
+    // 사용자 찾기
+    @Override
+    public User findUser(Long userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new UserHandler(ErrorStatus.USER_NOT_FOUND));
+    }
 }
